# cg-animation

./: .gitignore  CMakeLists.txt  README.de.md  README.md
icons/: AppIcon.icns
meshes/: ruined building.mtl
rigged_model/: animation.dae  character_rigged.fbx  final low poly character  rigged.fbx  happy.dae  head_shaking_sad_boy.dae  loop_jump.dae  rigged.dae  rigged.glb  sad.dae  sadly.dae  surely.dae  test.dae  tester.dae  ultrarigged.dae
shaders/: assimpshader.frag  assimpshader.vert  blurshader.frag  blurshader.vert  colorshader.frag  colorshader.vert  cubedepthshader.frag  cubedepthshader.geom  cubedepthshader.vert  deferred_lighting.frag  deferred_lighting.vert  depthshader.vert  fireshader.frag  fireshader.vert  hdrshader.frag  hdrshader.vert  lightingshader.frag  lightingshader.vert  lineshader.frag  lineshader.vert  meshshader.frag  meshshader.vert  particles.frag  particles.vert  particleshader.frag  particleshader.vert  simple_geometry.frag  simple_geometry.vert  textured_geometry.frag  textured_geometry.vert  textured_geometry_normals.frag  textureshader.frag  textureshader.vert  tiled_textured_geometry.frag  tiled_textured_geometry.vert
src/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  animation.hpp  animationdata.hpp  animator.cpp  animator.hpp  bone.cpp  bone.hpp  cgintro-animation  cmake_install.cmake  config.hpp.in  fireshader.cpp  fireshader.h  glm_helpers.hpp  lightninggenerator.cpp  lightninggenerator.hpp  main.cpp  mainapp.cpp  mainapp.hpp  model_animation.cpp  model_animation.hpp  movingcamera.cpp  movingcamera.hpp  music.cpp  music.hpp  particlesystem.cpp  particlesystem.hpp  renderobject.cpp  renderobject.hpp  resourcemanager.cpp  resourcemanager.hpp
src/cinematic_engine/: cameracontroller.cpp  cameracontroller.hpp  spline.cpp  spline.hpp
src/dark_animations/: animation.cpp  animation.hpp  animationmodel.cpp  animationmodel.hpp  animator.cpp  animator.hpp  assimp_glm_helpers.cpp  assimp_glm_helpers.hpp  bone.cpp  bone.hpp  model_animation.cpp  model_animation.hpp
src/framework/: app.cpp  app.hpp  camera.cpp  camera.hpp  common.cpp  common.hpp  filesystem.cpp  filesystem.hpp  imguiutil.cpp  imguiutil.hpp  mesh.cpp  mesh.hpp  objparser.cpp  objparser.hpp  series.hpp  skeletal_camera.cpp  skeletal_camera.hpp  skeletal_shader.cpp  skeletal_shader.hpp  skeletalmesh.cpp  skeletalmesh.hpp  uniformbuffer.hpp
src/framework/gl/: buffer.cpp  buffer.hpp  framebuffer.cpp  framebuffer.hpp  program.cpp  program.hpp  query.cpp  query.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertexarray.cpp  vertexarray.hpp
src/renderer/: light.cpp  light.hpp  material.hpp  renderer.cpp  renderer.hpp  renderobject.cpp  renderobject.hpp  scene.cpp  scene.hpp
